@@ -35,7 +35,7 @@
 # define A_STANDOUT	0
 #endif /* ! A_STANDOUT */
 
-#include <grub/machine/console.h>
+#include <grub/util/console.h>
 #include <grub/term.h>
 #include <grub/types.h>
 
